[gd_scene load_steps=8 format=3 uid="uid://bkvttykvie6wd"]

[ext_resource type="Script" path="res://Scripts/life_spidercrab.gd" id="1_3m3wu"]
[ext_resource type="Texture2D" uid="uid://e1v54i3ffumy" path="res://Art/spider.png" id="2_ge6rd"]
[ext_resource type="Texture2D" uid="uid://fq5gixmohyml" path="res://Art/spider_dead.png" id="3_ci0x6"]

[sub_resource type="CircleShape2D" id="CircleShape2D_chh8i"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wmr4f"]
size = Vector2(42, 42)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w0i8c"]
size = Vector2(128, 128)

[sub_resource type="Theme" id="Theme_g2d4v"]

[node name="Spidercrab" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 2
input_pickable = true
script = ExtResource("1_3m3wu")

[node name="Timer" type="Timer" parent="."]

[node name="ActionTimer" type="Timer" parent="."]
one_shot = true

[node name="Vision" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 0

[node name="Collision" type="CollisionShape2D" parent="Vision"]
visible = false
shape = SubResource("CircleShape2D_chh8i")

[node name="Sprite_0" type="Sprite2D" parent="."]
texture = ExtResource("2_ge6rd")
centered = false

[node name="Dead_Sprite_0" type="Sprite2D" parent="."]
texture = ExtResource("3_ci0x6")
centered = false

[node name="Collision_0" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_wmr4f")

[node name="Collision_1" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_w0i8c")

[node name="DebugLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="Camera2D" type="Camera2D" parent="."]
enabled = false

[node name="HP_bar" type="ProgressBar" parent="."]
visible = false
offset_left = -48.0
offset_top = -63.0
offset_right = -38.0
offset_bottom = -1.0
theme = SubResource("Theme_g2d4v")
step = 1.0
value = 10.0
fill_mode = 3
show_percentage = false

[node name="Energy_bar" type="ProgressBar" parent="."]
visible = false
offset_left = -34.0
offset_top = -64.0
offset_right = -23.0
offset_bottom = -1.0
step = 1.0
value = 50.0
fill_mode = 3
show_percentage = false

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="ActionTimer" to="." method="_on_action_timer_timeout"]
[connection signal="body_entered" from="Vision" to="." method="_on_vision_body_entered"]
[connection signal="body_exited" from="Vision" to="." method="_on_vision_body_exited"]
